fix go to profile button on mobile

--- a/src/components/Resume/resumeCss.css
+++ b/src/components/Resume/resumeCss.css
@@ -20,7 +20,6 @@
 }
 
 .videoTag{
-
 position: relative;
 width:700px;
 height:700px;
@@ -121,6 +120,7 @@ h2 {font-family: 'Montserrat', sans-serif;color: white}
 
 #landing-header{
     z-index: 1;
+    height:600px;
     position: relative;
     text-align: center;
 }
